CCRU-2749 z-index issues (#173)

--- a/client/components/Patients/Shared/PatientActionsContainer/styles.scss
+++ b/client/components/Patients/Shared/PatientActionsContainer/styles.scss
@@ -27,3 +27,7 @@
     }
   }
 }
+
+.patientActionsModalTheme {
+  z-index: 99999;
+}
